# cnpy

./: CMakeLists.txt  CMakePresets.json
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt  example1.cpp
source/: cnpy.cpp
